src/objects/Story__c.object
<CustomObject>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Story_Business_Requestor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Story</relationshipLabel>
        <relationshipName>Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story_Completion_Date__c</fullName>
        <inlineHelpText>The date this story will be implemented.</inlineHelpText>
        <label>Story Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Story_Name__c</fullName>
        <label>Story Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story_Notes__c</fullName>
        <label>Story Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story_Status__c</fullName>
        <label>Story Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sprint__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>Story_Owner__c</columns>
        <columns>Story_Status__c</columns>
        <columns>Business_Requestor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Stories</fullName>
        <columns>NAME</columns>
        <columns>Story_Name__c</columns>
        <columns>Business_Requestor__c</columns>
        <columns>Story_Owner__c</columns>
        <columns>Story_Notes__c</columns>
        <columns>Story_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Story_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Stories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Planned_Stories</fullName>
        <columns>NAME</columns>
        <columns>Story_Name__c</columns>
        <columns>Business_Requestor__c</columns>
        <columns>Story_Owner__c</columns>
        <columns>Story_Notes__c</columns>
        <columns>Story_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Story_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Story_Status__c</field>
            <operation>equals</operation>
            <value>Planned,In Progress</value>
        </filters>
        <label>Planned Stories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Story</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Story</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>